--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules/**/*
+api.js
 .expo/*
 npm-debug.*
 *.jks
@@ -9,7 +10,7 @@ npm-debug.*
 *.orig.*
 web-build/
 web-report/
-api.js
+secret.js
 
 # macOS
 .DS_Store
