--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^5.5.1",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-secure-store": "~8.1.0",
+    "firebase": "7.9.0",
     "install": "^0.13.0",
     "npm": "^6.14.5",
     "react": "~16.9.0",
